@@ -1,3 +1,6 @@
+2018-10-21  kennethj <cerebrum@gagarin.uit.no>
+	* access_SYSX:	updated to handle unicode
+
 2018-10-20  kennethj <cerebrum@gagarin.uit.no>
 	* sito_utils.py:	updated to handle unicode
 
